# maestro

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  workflow.example.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  useWebSocket.ts
frontend/src/dashboard/: DashboardPage.tsx
frontend/src/planner/: ArtifactViewer.tsx  IntakeWizard.tsx  PlannerPage.tsx
frontend/src/shared/: Header.tsx  StatusBadge.tsx  theme.ts
src/maestro/: __init__.py  __main__.py  cli.py  linear_client.py
src/maestro/api/: __init__.py  app.py  planner_routes.py  runner_routes.py  ws.py
src/maestro/planner/: __init__.py  graph.py  guardrails.py  llm.py  nodes.py
src/maestro/planner/exporters/: __init__.py  html.py
src/maestro/planner/prompts/: __init__.py  analyzer.py  sprint_planner.py  story_writer.py  task_decomposer.py
src/maestro/planner/tools/: __init__.py  azure_devops.py  confluence.py  github.py  jira.py  llm_tools.py
src/maestro/runner/: __init__.py  agent_runner.py  orchestrator.py  prompt_assembler.py  workflow_config.py  workspace.py
tests/: _node_helpers.py
tests/unit/planner/: test_config.py  test_llm.py  test_state.py
tests/unit/planner/guardrails/: test_guardrails_adversarial.py  test_input_guardrails.py  test_output_guardrails.py
tests/unit/planner/nodes/: test_agent_core.py  test_analyzer.py  test_capacity_check.py  test_epic_generator.py  test_intake.py  test_parser_adversarial.py  test_review.py  test_route_entry.py  test_sprint_planner.py  test_sprint_selector.py  test_story_writer.py  test_task_decomposer.py
tests/unit/planner/prompts/: test_analyzer_prompt.py  test_epic_generator_prompt.py  test_sprint_planner_prompt.py  (+3 more)
(+8 files in other folders)
